# LoreBook

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  ChunkingAndWorldEditing.md  Neior.db.bak  README.md  RUN FIRST DEV GUIDE.md  TODO.md  imgui.ini  request.md  vaultExample.md  vcpkg.json
.github/: copilot-instructions.md
LoreBook_Resources/: CMakeLists.txt  EmbeddingCompiler
LoreBook_Resources/resources/Kernels/: AlphaBlend.cl  ApplyDelta.cl  BiomeColorMap.cl  Buildings.cl  ChunkAssemble.cl  ConcatVolumes.cl  FABRIKSolver.cl  FeildToMercator.cl  FieldToSphere.cl  Humidity.cl  LandType.cl  Latitude.cl  Mercator.cl  Multiply.cl  OrbitalView.cl  Perlin.cl  PerlinRegion.cl  Rivers.cl  ScalarToColor.cl  SpherePerspective.cl  Tectonics.cl  Temperature.cl  TextEffects.cl  Util.cl  WaterTable.cl
LoreBook_Resources/resources/Kernels/particles/: common.cl  electric.cl  fire.cl  smoke.cl  snow.cl  sparkle.cl
LoreBook_Resources/src/: LoreBook_ResourcesEmbeddedVFS.cpp
docs/: BaseTextEditor-Refactoring-Status.md  MarkdownAndTextEffects.md  TODO.md  TextAffects.md  lua-scripting-engine-plan.md  media-playback-plan.md  preview-renderer-plan.md  tectonics-improvement-plan.md
docs/CharacterEditor/: Procedural Creature Engine Requirements.md  Procedural Creature Engine.md  SocketCentricArchitecture.md
include/: CryptoHelpers.hpp  DBBackend.hpp  FileBackend.hpp  Fonts.hpp  GraphView.hpp  Icons.hpp  LLMClient.hpp  LuaBindingDocs.hpp  LuaBindingDocsUtil.hpp  LuaCanvasBindings.hpp  LuaDocsTest.hpp  LuaEngine.hpp  LuaFSBindings.hpp  LuaImGuiBindings.hpp  LuaScriptManager.hpp  LuaVaultBindings.hpp  MarkdownText.hpp  MergeConflictUI.hpp  ModelLoader.hpp  ModelViewer.hpp  MySQLTest.hpp  OpenAIClient.hpp  OpenCLContext.hpp  ResourceExplorer.hpp  ScriptEditor.hpp  TextEffectSystem.hpp  TextEffectsOverlay.hpp  Vault.hpp  VaultAssistant.hpp  VaultChat.hpp  VaultHistory.hpp  VaultSync.hpp  stringUtils.hpp
include/CharacterEditor/: Bone.hpp  CharacterEditorUI.hpp  CharacterManager.hpp  GPUIKSolver.hpp  IKSolver.hpp  Mesh.hpp  ModelLoader.hpp  Part.hpp  PartLibrary.hpp  PartRole.hpp  Socket.hpp  Transform.hpp  Vertex.hpp
include/Editors/Common/: BaseTextEditor.hpp  SyntaxError.hpp
include/Editors/Java/: JavaEditor.hpp
include/Editors/Java/ProgramStructure/: Class.hpp  Method.hpp  Package.hpp  ProgramStructure.hpp  Type.hpp  Variable.hpp
include/Editors/Lua/: LuaEditor.hpp
include/Editors/Lua/ProgramStructure/: Class.hpp  Method.hpp  ProgramStructure.hpp  Type.hpp  Variable.hpp
include/Editors/Markdown/: CollisionMask.hpp  Effect.hpp  LayoutEngine.hpp  MarkdownDocument.hpp  MarkdownEditor.hpp  MarkdownPreview.hpp  PreviewEffectSystem.hpp  ShaderCompositor.hpp
include/Editors/Markdown/Effects/: AllEffects.hpp  BloodEffect.hpp  ElectricEffect.hpp  FireEffect.hpp  GlowEffect.hpp  HoneyEffect.hpp  MagicEffect.hpp  SimpleEffects.hpp  SmokeEffect.hpp  SnowEffect.hpp  SparkleEffect.hpp  ToxicGooEffect.hpp  WaterEffect.hpp
include/FileBackends/: LocalFileBackend.hpp  VaultFileBackend.hpp
include/LoreBook_Resources/: LoreBook_Resources.hpp  LoreBook_ResourcesEmbeddedVFS.hpp
include/Util/: ErrorStream.hpp  JVM.hpp  StandardStream.hpp
include/WorldMaps/: WorldMap.hpp
include/WorldMaps/Buildings/: Building.hpp  Floor.hpp  FloorPlan.hpp  FloorPlanEditor.hpp
include/WorldMaps/Map/: BiomeLayer.hpp  BuildingLayer.hpp  ColorLayer.hpp  ElevationLayer.hpp  HumidityLayer.hpp  LandTypeLayer.hpp  LatitudeLayer.hpp  MapLayer.hpp  ModelElevationLayer.hpp  PercipitationLayer.hpp  PrecipitationLayer.hpp  RiverLayer.hpp  TectonicsLayer.hpp  TemperatureLayer.hpp  WaterLayer.hpp  WaterTableLayer.hpp
include/WorldMaps/Orbital/: CelestialBody.hpp  OrbitalEditor.hpp  OrbitalMechanics.hpp  OrbitalProjection.hpp  OrbitalSystem.hpp
include/WorldMaps/World/: Chunk.hpp  ChunkAssembler.hpp  LayerDelta.hpp  Projection.hpp  QuadTree.hpp  World.hpp
include/WorldMaps/World/Projections/: MercatorProjection.hpp  Projection.hpp  SphereProjection.hpp
include/db/: MySQLBackend.hpp  SQLiteBackend.hpp
src/: CryptoHelpers.cpp  Fonts.cpp  GraphView.cpp  Icons.cpp  LLMClient.cpp  LoreBook.cpp  LuaBindingDocs.cpp  LuaBindingDocsUtil.cpp  LuaCanvasBindings.cpp  LuaDocsTest.cpp  LuaEngine.cpp  LuaFSBindings.cpp  LuaImGuiBindings.cpp  LuaScriptManager.cpp  LuaVaultBindings.cpp  MarkdownText.cpp  MergeConflictUI.cpp  ModelLoader.cpp  ModelViewer.cpp  MySQLTest.cpp  OpenAIClient.cpp  OpenCLContext.cpp  ResourceExplorer.cpp  ScriptEditor.cpp  TextEffectSystem.cpp  TextEffectsOverlay.cpp  VaultAssistant.cpp  VaultChat.cpp  VaultFactory.cpp  VaultHistory.cpp  VaultHistory_Conflicts.cpp  VaultScripts.cpp  VaultSync.cpp  imgui.ini
src/CharacterEditor/: CharacterEditorUI.cpp  CharacterManager.cpp  GPUIKSolver.cpp  IKSolver.cpp  ModelLoader.cpp  PartLibrary.cpp  PartRole.cpp
src/Editors/Common/: BaseTextEditor.cpp
src/Editors/Java/: JavaEditor.cpp
src/Editors/Java/ProgramStructure/: ProgramStructure.cpp
src/Editors/Lua/: LuaEditor.cpp  LuaEditor_refactored.cpp
src/Editors/Markdown/: CollisionMask.cpp  Effect.cpp  LayoutEngine.cpp  MarkdownDocument.cpp  MarkdownEditor.cpp  MarkdownPreview.cpp  PreviewEffectSystem.cpp  ShaderCompositor.cpp
src/Editors/Markdown/Effects/: BloodEffect.cpp  ElectricEffect.cpp  FireEffect.cpp  GlowEffect.cpp  HoneyEffect.cpp  MagicEffect.cpp  SimpleEffects.cpp  SmokeEffect.cpp  (+4 more)
src/FileBackends/: LocalFileBackend.cpp  VaultFileBackend.cpp
src/Util/: JVM.cpp
src/WorldMaps/: WorldMap.cpp
src/WorldMaps/Buildings/: FloorPlanEditor.cpp
src/WorldMaps/Map/: BiomeLayer.cpp  BuildingLayer.cpp  ColorLayer.cpp  ElevationLayer.cpp  HumidityLayer.cpp  LandTypeLayer.cpp  LatitudeLayer.cpp  MapLayer.cpp  ModelElevationLayer.cpp  RiverLayer.cpp  TectonicsLayer.cpp  TemperatureLayer.cpp  WaterLayer.cpp  WaterTableLayer.cpp
src/WorldMaps/Orbital/: OrbitalEditor.cpp  OrbitalProjection.cpp  OrbitalSystem.cpp
src/WorldMaps/World/: Projection.cpp  WorldDeltaPersistence.cpp
src/db/: MySQLBackend.cpp  SQLiteBackend.cpp
vcpkg/patches/Windows/: mysql-connector-cpp.patch
(+4 files in other folders)
